# Titkova_oop

./: README.md
BattleShip/: AbilityManager.cpp  AbilityManager.h  CMakeLists.txt  CommandProvider.cpp  CommandProvider.h  Commands.h  ConsoleRender.cpp  ConsoleRender.h  Enum.h  Expectation.h  GameController.h  GameDisplay.h  GameField.cpp  GameField.h  GameManager.cpp  GameManager.h  GameState.cpp  GameState.h  HashSum.cpp  HashSum.h  Interface.cpp  Interface.h  Ship.cpp  Ship.h  ShipManager.cpp  ShipManager.h  main.cpp
